[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/QuickSettings/QuickSettingsLogic.gd" type="Script" id=1]
[ext_resource path="res://addons/QuickSettings/PropertySelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/QuickSettings/ArrayEditor.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/QuickSettings/ClipboardMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/QuickSettings/RenameDialog.tscn" type="PackedScene" id=5]

[sub_resource type="Image" id=1]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 1 )
size = Vector2( 16, 16 )

[node name="QuickSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ -38.0 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 22.0

[node name="ProjectPropertySelectorButton" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.7 )
margin_right = 162.0
margin_bottom = 22.0
text = "Add Project Property"
icon = SubResource( 2 )

[node name="EditorPropertySelectorButton" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.7 )
margin_left = 166.0
margin_right = 320.0
margin_bottom = 22.0
text = "Add Editor Property"
icon = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="RestartLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 582.0
margin_right = 1024.0
margin_bottom = 596.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The editor must be restarted for changes to take effect."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_right = 521.0
margin_bottom = 266.0
popup_exclusive = true
window_title = "Ouvrir un fichier"
mode = 0
filters = PoolStringArray( "*.png" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertySelector" parent="." instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 24.0
margin_right = -616.0
margin_bottom = -76.0

[node name="ContextMenu" parent="." instance=ExtResource( 4 )]
items = [ "Copy path", null, 0, false, false, 0, 0, null, "", false, "Copy value", null, 0, false, false, 1, 0, null, "", false, "Copy value as text", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Paste value", null, 0, false, false, 4, 0, null, "", false ]

[node name="ArrayEditor" parent="." instance=ExtResource( 3 )]

[node name="RenameDialog" parent="." instance=ExtResource( 5 )]

[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
